force-app/main/default/objects/Account/fields/MC_Fecha_proximo_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>MC_Fecha_proximo_seguimiento__c</fullName>
    <label>Fecha proximo seguimiento</label>
    <type>Date</type>
</CustomField>