force-app/main/default/objects/Account/fields/MC_No_autoriza_tratamiento_de_datos__c.field-meta.xml
<CustomField>
    <fullName>MC_No_autoriza_tratamiento_de_datos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No autoriza tratamiento de datos</label>
    <type>Checkbox</type>
</CustomField>