force-app/main/default/objects/Account/fields/MC_No_recibir_correos_electronicos__c.field-meta.xml
<CustomField>
    <fullName>MC_No_recibir_correos_electronicos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir correos electrónicos</label>
    <type>Checkbox</type>
</CustomField>