force-app/main/default/objects/Account/fields/MC_ultima_fecha_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>MC_ultima_fecha_de_contacto__c</fullName>
    <label>Última fecha de contacto</label>
    <type>Date</type>
</CustomField>