force-app/main/default/objects/Account/fields/MC_ultimo_comentario_en_cuenta__c.field-meta.xml
<CustomField>
    <fullName>MC_ultimo_comentario_en_cuenta__c</fullName>
    <label>Último comentario en cuenta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>