force-app/main/default/objects/Account/fields/MC_Vitrina_cuenta__c.field-meta.xml
<CustomField>
    <fullName>MC_Vitrina_cuenta__c</fullName>
    <formula>TEXT($User.AM_Concesionario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vitrina cuenta</label>
    <type>Text</type>
</CustomField>