force-app/main/default/objects/Account/fields/Nivel_de_ingresos__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_ingresos__c</fullName>
    <label>Nivel de ingresos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menor a 1 SMMLV</fullName>
            </value>
            <value>
                <fullName>Entre 1 - 2 SMMLV</fullName>
            </value>
            <value>
                <fullName>Entre 2 - 3 SMMLV</fullName>
            </value>
            <value>
                <fullName>Entre 3 - 4 SMMLV</fullName>
            </value>
            <value>
                <fullName>Mayor a 4 SMMLV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>