force-app/main/default/objects/Account/fields/Nivel_educativo__c.field-meta.xml
<CustomField>
    <fullName>Nivel_educativo__c</fullName>
    <label>Nivel de estudio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Bachiller</fullName>
            </value>
            <value>
                <fullName>Tecnologico-Tecnico</fullName>
            </value>
            <value>
                <fullName>Universitario</fullName>
            </value>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
                <isActive>false</isActive>
                <label>Otro</label>
            </value>
            <value>
                <fullName>Postgrado</fullName>
                <isActive>false</isActive>
                <label>Postgrado</label>
            </value>
            <value>
                <fullName>Profesional</fullName>
                <isActive>false</isActive>
                <label>Profesional</label>
            </value>
            <value>
                <fullName>Secundaria</fullName>
                <isActive>false</isActive>
                <label>Secundaria</label>
            </value>
            <value>
                <fullName>Tecnológico</fullName>
                <isActive>false</isActive>
                <label>Tecnológico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>