force-app/main/default/objects/Account/fields/No_recibir_correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>No_recibir_correo_electronico__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null, Referidor_Cuenta__r.MC_No_recibir_correos_electronicos__c , IF( Referidor_Lead__c &lt;&gt; null, Referidor_Lead__r.HasOptedOutOfEmail , FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir correo electrónico</label>
    <type>Checkbox</type>
</CustomField>