force-app/main/default/objects/Account/fields/No_recibir_correos_electr_nicos_conyuge__c.field-meta.xml
<CustomField>
    <fullName>No_recibir_correos_electr_nicos_conyuge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir correos electrónicos conyuge</label>
    <type>Checkbox</type>
</CustomField>