force-app/main/default/objects/Account/fields/No_recibir_SMS__c.field-meta.xml
<CustomField>
    <fullName>No_recibir_SMS__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null, Referidor_Cuenta__r.SO_No_recibir_SMS_Referidor__c , IF( Referidor_Lead__c &lt;&gt; null, Referidor_Lead__r.DoNotCall , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir SMS</label>
    <type>Checkbox</type>
</CustomField>