force-app/main/default/objects/Account/fields/Nueva_Segmentacion__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Segmentacion__c</fullName>
    <formula>IF( ISNULL(Fecha_real_de_entrega__c), &apos;Prospecto&apos;,
IF(TODAY()&lt;= IF(
  AND(
    MONTH( Fecha_real_de_entrega__c) = 2,
    DAY( Fecha_real_de_entrega__c) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Fecha_real_de_entrega__c) + 2, 400 ) = 0, 
        AND( 
          MOD( YEAR( Fecha_real_de_entrega__c) + 2, 4 ) = 0,
          MOD( YEAR( Fecha_real_de_entrega__c) + 2, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Fecha_real_de_entrega__c) + 2, 3, 1),
  DATE( YEAR( Fecha_real_de_entrega__c) + 2, MONTH( Fecha_real_de_entrega__c), DAY( Fecha_real_de_entrega__c) )
),&apos;Comprador entre 0 y 2 años&apos;,
IF(TODAY()&lt;= IF(
  AND(
    MONTH( Fecha_real_de_entrega__c) = 2,
    DAY( Fecha_real_de_entrega__c) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Fecha_real_de_entrega__c) + 7, 400 ) = 0, 
        AND( 
          MOD( YEAR( Fecha_real_de_entrega__c) + 7, 4 ) = 0,
          MOD( YEAR( Fecha_real_de_entrega__c) + 7, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Fecha_real_de_entrega__c) + 7, 3, 1),
  DATE( YEAR( Fecha_real_de_entrega__c) + 7, MONTH( Fecha_real_de_entrega__c), DAY( Fecha_real_de_entrega__c) )
),&apos;Cliente potencial&apos;,&apos;Cliente antiguo&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmentación</label>
    <type>Text</type>
</CustomField>