force-app/main/default/objects/Account/fields/Numero_via_principal__c.field-meta.xml
<CustomField>
    <fullName>Numero_via_principal__c</fullName>
    <label>Número vía principal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>