force-app/main/default/objects/Account/fields/Numero_via_secundaria__c.field-meta.xml
<CustomField>
    <fullName>Numero_via_secundaria__c</fullName>
    <label>Número vía secundaria</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>