force-app/main/default/objects/Account/fields/Organizacion_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Organizacion_Ventas__c</fullName>
    <label>Organización de Ventas</label>
    <length>4</length>
    <type>Text</type>
</CustomField>