force-app/main/default/objects/Account/fields/Orientacion_via_secundaria__c.field-meta.xml
<CustomField>
    <fullName>Orientacion_via_secundaria__c</fullName>
    <label>Orientación vía secundaria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Este</fullName>
            </value>
            <value>
                <fullName>Oeste</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>