force-app/main/default/objects/Account/fields/Otro_Actividades_Comerciales__c.field-meta.xml
<CustomField>
    <fullName>Otro_Actividades_Comerciales__c</fullName>
    <label>Otro (Actividades Comerciales)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>