force-app/main/default/objects/Account/fields/Otro_Base_de_datos_de_Aliados__c.field-meta.xml
<CustomField>
    <fullName>Otro_Base_de_datos_de_Aliados__c</fullName>
    <label>Otro (Base de datos de Aliados)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>