force-app/main/default/objects/Account/fields/Permiso_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Permiso_de_Contacto__c</fullName>
    <label>Permiso de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Permiso_de_Contacto</valueSetName>
    </valueSet>
</CustomField>