force-app/main/default/objects/Account/fields/Prefijo_Complemento__c.field-meta.xml
<CustomField>
    <fullName>Prefijo_Complemento__c</fullName>
    <label>Prefijo Complemento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>AC Avenida Calle</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>AD Administración</label>
            </value>
            <value>
                <fullName>ADL</fullName>
                <label>ADL Adelante</label>
            </value>
            <value>
                <fullName>AER</fullName>
                <label>AER Aeropuerto</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>AG Agencia</label>
            </value>
            <value>
                <fullName>AGP</fullName>
                <label>AGP Agrupación</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>AL Altillo</label>
            </value>
            <value>
                <fullName>ALD</fullName>
                <label>ALD Al lado</label>
            </value>
            <value>
                <fullName>ALM</fullName>
                <label>ALM Almacén</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>AP Apartamento</label>
            </value>
            <value>
                <fullName>APTDO</fullName>
                <label>APTDO Apartado</label>
            </value>
            <value>
                <fullName>ATR</fullName>
                <label>ATR Atrás</label>
            </value>
            <value>
                <fullName>AVIAL</fullName>
                <label>AVIAL Anillo Vial</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>BG Bodega</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>BL Bloque</label>
            </value>
            <value>
                <fullName>BRR</fullName>
                <label>BRR Barrio</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C Corregimiento</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>CA Casa</label>
            </value>
            <value>
                <fullName>CAS</fullName>
                <label>CAS Caserío</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>CC Centro Comercial</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <label>CD Ciudadela</label>
            </value>
            <value>
                <fullName>CEL</fullName>
                <label>CEL Célula</label>
            </value>
            <value>
                <fullName>CEN</fullName>
                <label>CEN Centro</label>
            </value>
            <value>
                <fullName>CLJ</fullName>
                <label>CLJ Callejón</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>CN Camino</label>
            </value>
            <value>
                <fullName>CON</fullName>
                <label>CON Conjunto Residencial</label>
            </value>
            <value>
                <fullName>CONJ</fullName>
                <label>CONJ Conjunto</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>CS Consultorio</label>
            </value>
            <value>
                <fullName>DP</fullName>
                <label>DP Depósito</label>
            </value>
            <value>
                <fullName>DPTO</fullName>
                <label>DPTO Departamento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>