force-app/main/default/objects/Account/fields/Primer_apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_apellido__c</fullName>
    <label>Primer apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>