force-app/main/default/objects/Account/fields/Primer_nombre__c.field-meta.xml
<CustomField>
    <fullName>Primer_nombre__c</fullName>
    <label>Primer nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>