force-app/main/default/objects/Account/fields/PrimerUsAut__c.field-meta.xml
<CustomField>
    <fullName>PrimerUsAut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrimerUsAut</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>