force-app/main/default/objects/Account/fields/Que_actividad_realiza_en_tiempo_libre__c.field-meta.xml
<CustomField>
    <fullName>Que_actividad_realiza_en_tiempo_libre__c</fullName>
    <label>¿Qué actividad realiza en tiempo libre?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T.V</fullName>
            </value>
            <value>
                <fullName>Teatro</fullName>
            </value>
            <value>
                <fullName>Finca</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Jardineria</fullName>
            </value>
            <value>
                <fullName>Música</fullName>
            </value>
            <value>
                <fullName>Cine</fullName>
            </value>
            <value>
                <fullName>Viajar</fullName>
            </value>
            <value>
                <fullName>Lectura</fullName>
            </value>
            <value>
                <fullName>Deporte</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>