force-app/main/default/objects/Account/fields/ReasignacionIdUser__c.field-meta.xml
<CustomField>
    <fullName>ReasignacionIdUser__c</fullName>
    <formula>$Setup.ReasignacionMasiva__c.Id_Usuario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReasignacionIdUser</label>
    <type>Text</type>
</CustomField>