force-app/main/default/objects/Account/fields/Referidor_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Referidor_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referidor Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas (Referidor Cuenta)</relationshipLabel>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>