force-app/main/default/objects/Account/fields/Referidor_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referidor_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referidor Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>