force-app/main/default/objects/Account/fields/RM_Cuenta_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>RM_Cuenta_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas Relacionadas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>