force-app/main/default/objects/Account/fields/Segmentacion2__c.field-meta.xml
<CustomField>
    <fullName>Segmentacion2__c</fullName>
    <defaultValue>&quot;Prospecto&quot;</defaultValue>
    <label>Anterior Segmentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto</fullName>
                <default>true</default>
                <label>Prospecto</label>
            </value>
            <value>
                <fullName>Cliente en Garantía</fullName>
            </value>
            <value>
                <fullName>Cliente en Garantía (Extendida)</fullName>
            </value>
            <value>
                <fullName>Cliente Potencial</fullName>
            </value>
            <value>
                <fullName>Cliente Antiguo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>