force-app/main/default/objects/Account/fields/Segundo_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre__c</fullName>
    <label>Segundo nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>