force-app/main/default/objects/Account/fields/SO_Cuenta_Agencia__c.field-meta.xml
<CustomField>
    <fullName>SO_Cuenta_Agencia__c</fullName>
    <formula>Concesionario_Vitrina__r.Agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>