force-app/main/default/objects/Account/fields/SO_Cuenta_creada_hoy__c.field-meta.xml
<CustomField>
    <fullName>SO_Cuenta_creada_hoy__c</fullName>
    <formula>IF(
DATEVALUE(CreatedDate) = TODAY(),&quot;CREACION&quot;, &quot;MODIFICACION&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta creada hoy?</label>
    <type>Text</type>
</CustomField>