force-app/main/default/objects/Account/fields/SO_Email_de_referidor_CTA__c.field-meta.xml
<CustomField>
    <fullName>SO_Email_de_referidor_CTA__c</fullName>
    <formula>SO_Referidor_Cuenta__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email de referidor</label>
    <type>Text</type>
</CustomField>