force-app/main/default/objects/Account/fields/SO_No_recibir_correo_electronico_Refer__c.field-meta.xml
<CustomField>
    <fullName>SO_No_recibir_correo_electronico_Refer__c</fullName>
    <formula>SO_Referidor_Cuenta__r.PersonHasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir correos electrónicos</label>
    <type>Checkbox</type>
</CustomField>