force-app/main/default/objects/Account/fields/SO_No_recibir_SMS_Referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_No_recibir_SMS_Referidor__c</fullName>
    <formula>SO_Referidor_Cuenta__r.AM_No_recibir_SMS__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir SMS</label>
    <type>Checkbox</type>
</CustomField>