force-app/main/default/objects/Account/fields/SO_Numero_de_identificacion_referidorCTA__c.field-meta.xml
<CustomField>
    <fullName>SO_Numero_de_identificacion_referidorCTA__c</fullName>
    <formula>SO_Referidor_Cuenta__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de identificación referidor</label>
    <type>Text</type>
</CustomField>