force-app/main/default/objects/Account/fields/SO_Referidor_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>SO_Referidor_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo es para asociar el REFERIDOR si la fuente de prospeccion es Referido</description>
    <inlineHelpText>Este campo es para asociar el REFERIDOR si la fuente de prospeccion es Referido</inlineHelpText>
    <label>Referidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas (Referidor)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>