force-app/main/default/objects/Account/fields/SO_Registro_activo__c.field-meta.xml
<CustomField>
    <fullName>SO_Registro_activo__c</fullName>
    <description>Campo para determinar si el registro esta activo o no.</description>
    <label>Registro activo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <default>true</default>
                <label>SI</label>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>