force-app/main/default/objects/Account/fields/SO_Telefono_ReferidorCTA__c.field-meta.xml
<CustomField>
    <fullName>SO_Telefono_ReferidorCTA__c</fullName>
    <formula>IF (
NOT(ISBLANK( SO_Referidor_Cuenta__r.Phone )), SO_Referidor_Cuenta__r.Phone, SO_Referidor_Cuenta__r.Fax
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Referidor</label>
    <type>Text</type>
</CustomField>