force-app/main/default/objects/Account/fields/SO_Tipo_de_cliente_Referidor_cuenta__c.field-meta.xml
<CustomField>
    <fullName>SO_Tipo_de_cliente_Referidor_cuenta__c</fullName>
    <formula>TEXT(SO_Referidor_Cuenta__r.AM_Tipo_de_usuario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cliente Referidor</label>
    <type>Text</type>
</CustomField>