force-app/main/default/objects/Account/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <defaultValue>&quot;001&quot;</defaultValue>
    <label>Sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>