force-app/main/default/objects/Account/fields/Sucursal_activa__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_activa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sucursal activa</label>
    <type>Checkbox</type>
</CustomField>