force-app/main/default/objects/Account/fields/Telefono_movil_cliente__c.field-meta.xml
<CustomField>
    <fullName>Telefono_movil_cliente__c</fullName>
    <formula>PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono móvil cliente</label>
    <type>Text</type>
</CustomField>