force-app/main/default/objects/Account/fields/Telefono_Validado__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Validado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usado para indicar que el teléfono ya fue validado por el web service</description>
    <label>Teléfono Validado</label>
    <type>Checkbox</type>
</CustomField>