force-app/main/default/objects/Account/fields/Telfono_trabajo__c.field-meta.xml
<CustomField>
    <fullName>Telfono_trabajo__c</fullName>
    <label>Teléfono trabajo</label>
    <type>Phone</type>
</CustomField>