force-app/main/default/objects/Account/fields/Tiene_Hijos__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Hijos__c</fullName>
    <inlineHelpText>Recuerda registrar la información del parentesco en sección relación familiar</inlineHelpText>
    <label>¿Tiene Hijos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>