force-app/main/default/objects/Account/fields/Tiene_oportunidad_ganada__c.field-meta.xml
<CustomField>
    <fullName>Tiene_oportunidad_ganada__c</fullName>
    <label>Tiene oportunidad ganada</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>PU, Vendida</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>