force-app/main/default/objects/Account/fields/Tipo_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cuenta__c</fullName>
    <label>Tipo de cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>