force-app/main/default/objects/Account/fields/Tipo_De_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_De_Empresa__c</fullName>
    <label>Tipo De Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privada</fullName>
            </value>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Mixta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>