force-app/main/default/objects/Account/fields/Tipo_de_referidor__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_referidor__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null, TEXT(Referidor_Cuenta__r.AM_Tipo_de_usuario__c) , IF( Referidor_Lead__c &lt;&gt; null, TEXT(Referidor_Lead__r.Tipo__c) , &quot;No ha seleccionado Referidor&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de referidor</label>
    <type>Text</type>
</CustomField>