force-app/main/default/objects/Account/fields/Via_principal__c.field-meta.xml
<CustomField>
    <fullName>Via_principal__c</fullName>
    <label>Vía principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avenida</fullName>
            </value>
            <value>
                <fullName>Calle</fullName>
            </value>
            <value>
                <fullName>Carretera</fullName>
            </value>
            <value>
                <fullName>Circular</fullName>
            </value>
            <value>
                <fullName>Circunvalar</fullName>
            </value>
            <value>
                <fullName>Corregimiento</fullName>
            </value>
            <value>
                <fullName>Diagonal</fullName>
            </value>
            <value>
                <fullName>Kilometro</fullName>
            </value>
            <value>
                <fullName>Manzana</fullName>
            </value>
            <value>
                <fullName>Transversal</fullName>
            </value>
            <value>
                <fullName>Variante</fullName>
            </value>
            <value>
                <fullName>Vereda</fullName>
            </value>
            <value>
                <fullName>Via</fullName>
            </value>
            <value>
                <fullName>Lote</fullName>
            </value>
            <value>
                <fullName>Urbanizacion</fullName>
            </value>
            <value>
                <fullName>Parcelacion</fullName>
            </value>
            <value>
                <fullName>Zona</fullName>
            </value>
            <value>
                <fullName>Carrera</fullName>
            </value>
            <value>
                <fullName>Bodega</fullName>
            </value>
            <value>
                <fullName>Anillo vial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>