force-app/main/default/objects/Account/recordTypes/AM_CUE_Cuenta_empresarial.recordType-meta.xml
<RecordType>
    <fullName>AM_CUE_Cuenta_empresarial</fullName>
    <active>true</active>
    <description>Cuenta para empresas u organizaciones</description>
    <label>Persona Juridica</label>
</RecordType>